--- a/main.css
+++ b/main.css
@@ -19,4 +19,26 @@ button {
 .dropdown-menu {
     list-style: none;
     margin: 0;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 50px;
+    width: 150px;
+    box-shadow: 0px 6px 10px 0px rgba(0, 0, 0, 0.2);
+    padding: 0;
+    text-align: center;
+}
+
+.dropdown-link {
+    text-decoration: none;
+    display: block;
+    background-color: #f9f9f9;
+    color: #4a4a4f;
+    padding: 10px 5px;
+    transition: background-color .5s ease-in-out, color .5s ease-in-out;
+}
+
+.dropdown-link:hover {
+    color: #f9f9f9;
+    background-color: #4a4a4f;
 }
