--- a/main.css
+++ b/main.css
@@ -27,6 +27,9 @@ button {
     box-shadow: 0px 6px 10px 0px rgba(0, 0, 0, 0.2);
     padding: 0;
     text-align: center;
+    transform: translateY(-110%);
+    transition: transform .5s ease-in-out;
+    z-index: -1;
 }
 
 .dropdown-link {
@@ -41,4 +44,17 @@ button {
 .dropdown-link:hover {
     color: #f9f9f9;
     background-color: #4a4a4f;
+}
+
+.dropdown {
+    width: 150px;
+    position: relative;
+}
+
+.dropdown:hover button {
+    background-color: #018ec5;
+}
+
+.dropdown:hover .dropdown-menu {
+    transform: translateY(0);
 }
